proper re-set at ending + add font.asset files to git ignore

--- a/.gitignore
+++ b/.gitignore
@@ -62,3 +62,7 @@ sysinfo.txt
 # Crashlytics generated file
 crashlytics-build.properties
 Screenshot.png
+Assets/TextMesh Pro/Examples & Extras/Resources/Fonts & Materials/Anton SDF.asset
+Assets/TextMesh Pro/Examples & Extras/Resources/Fonts & Materials/Anton SDF.asset
+Assets/TextMesh Pro/Examples & Extras/Resources/Fonts & Materials/Bangers SDF.asset
+Assets/TextMesh Pro/Examples & Extras/Resources/Fonts & Materials/Electronic Highway Sign SDF.asset
